--- a/index.html
+++ b/index.html
@@ -195,11 +195,10 @@
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
                                         <div class="tajawal_black flex-caption-text">
-                                            <h2>Protecting Public &amp; Private<br>lives for over 50 years </h2>
-                                            <p>Vestibulum quam nisi, pretium a nibh sit amet, consectetur hendrerit
-                                                mi.<br>Aenean imperdiet lacus sit amet elit porta, et malesuada erat
-                                                bibendum<br>Cras sed nunc massa. Quisque tempor dolor sit amet tellus
-                                                malesuada,</p>
+                                            <h2>Providing Best &amp; <br> Medical Care  </h2>
+                                            <p>VThe health and well-being of our patients and their health care team will
+                                                <br>Aalways be our priority, so we follow the best practices for cleanliness. 
+                                            </p>
                                                 <ul class="flex_list_sliders">
                                                     <li class="element_list_slider">
                                                         <div class="parent_list_slider">
@@ -247,8 +246,16 @@
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
                                         <div class="tajawal_black flex-caption-text">
-                                            <h2>Protecting Public &amp; Private lives for over 50 years</h2>
+                                            <h2>Caring For The &amp; <br>
+                                                Health And Well &amp; <br>
+                                                Being Of Family. </h2>
+                                                <p>VThe health and well-being of our patients and their health care team will
+                                                    <br>Aalways be our priority, so we follow the best practices for cleanliness. 
+                                                </p>
                                             <a href="book-service.html"
+                                                class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View some of our
+                                                top cases</a>
+                                                <a href="book-service.html"
                                                 class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View some of our
                                                 top cases</a>
                                         </div>
