--- a/index.html
+++ b/index.html
@@ -80,15 +80,23 @@
                                 <p>+40 (0)20 0390 0999</p>
                             </div>
                         </div>
-                        <div class="tajawal_black col-md-6 col-sm-6">
-                            <ul class="tajawal_black pull-right social-icons">
+                        <div class="tajawal_black col-md-6 col-sm-6 update_styke">
+                            <ul class="tajawal_black pull-right social-icons icons_header">
                                 <li class="tajawal_black facebook">
                                     <a href="#">
                                         <i class="fa fa-facebook-f"></i>
                                     </a>
                                 </li>
-                                <li class="tajawal_black twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li class="tajawal_black linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li class="tajawal_black twitter">
+                                    <a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="tajawal_black linkedin">
+                                    <a href="#">
+                                        <i class="fa fa-linkedin"></i>
+                                    </a>
+                                </li>
                             </ul>
 
                             <form class="tajawal_black search-form">
@@ -99,18 +107,25 @@
                 </div>
             </div>
             <!-- Start Header -->
-            <div class="tajawal_black site-header">
-                <div class="tajawal_black container">
+            <div class="tajawal_black site-header" id="nav_sticky">
+                <div class="tajawal_black container flex_style_header">
                     <div class="tajawal_black site-logo">
                         <a href="index.html">
                             <img src="images/logo.png" alt="" class="tajawal_black default-logo">
-                            <img src="images/logo@2x.png" alt="" class="tajawal_black retina-logo" width="164"
-                                height="45">
                         </a>
                     </div>
 
-                    <a href="#" id="menu-toggle">Menu</a>
-                    <nav class="tajawal_black main-navigation pull-right">
+                    <!-- <a href="#" id="menu-toggle">
+                        <i class="fa fa-bars toggleIcon"></i>
+                    </a> -->
+                    <div class="icon_list_header">
+                        <div id="nav-icon1">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+                    <nav class="tajawal_black main-navigation pull-right" id="nav">
                         <ul class="tajawal_black dd-menu sf-menu">
                             <li><a href="index.html">Home</a>
                                 <ul>
@@ -182,6 +197,7 @@
                             <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                     </nav>
+                    <div class="dark-blue" id="blue"></div>
                 </div>
             </div>
         </div>
@@ -191,7 +207,7 @@
                 data-arrows="yes" data-style="fade" data-pause="yes">
                 <ul class="tajawal_black slides">
                     <li class="tajawal_black parallax" style="background-image: url(images/patterns/pt31.jpg);">
-                        <div class="tajawal_black flex-caption text-align-left vertical-center">
+                        <div class="tajawal_black  text-align-left vertical-center">
                             <div class="tajawal_black container">
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
@@ -202,7 +218,7 @@
                                                 <br>Aalways be our priority, so we follow the best practices for
                                                 cleanliness.
                                             </p>
-                                            <ul class="flex_list_sliders">
+                                            <ul class="flex_list_sliders dis_b_n">
                                                 <li class="element_list_slider">
                                                     <div class="parent_list_slider">
                                                         <a href="book-service.html"
@@ -240,6 +256,48 @@
                                                     <h4>Blood Pressure</h4>
                                                 </li>
                                             </ul>
+                                            <ul class="flex_list_sliders dis_n_b">
+                                                <div class="col_one">
+                                                    <li class="element_list_slider">
+                                                        <div class="parent_list_slider">
+                                                            <a href="book-service.html"
+                                                                class="tajawal_black icons_img_to_slider">
+                                                                <img src="images/assets/hospital_heart.png" alt="">
+                                                            </a>
+                                                        </div>
+                                                        <h4>Examination</h4>
+                                                    </li>
+                                                    <li class="element_list_slider">
+                                                        <div class="parent_list_slider">
+                                                            <a href="book-service.html"
+                                                                class="tajawal_black icons_img_to_slider">
+                                                                <img src="images/assets/hospital_medicine.png" alt="">
+                                                            </a>
+                                                        </div>
+                                                        <h4>Prescription </h4>
+                                                    </li>
+                                                </div>
+                                                <div class="col_two">
+                                                    <li class="element_list_slider">
+                                                        <div class="parent_list_slider">
+                                                            <a href="book-service.html"
+                                                                class="tajawal_black icons_img_to_slider">
+                                                                <img src="images/assets/hospital_heart_plus.png" alt="">
+                                                            </a>
+                                                        </div>
+                                                        <h4>Cardiogram</h4>
+                                                    </li>
+                                                    <li class="element_list_slider">
+                                                        <div class="parent_list_slider">
+                                                            <a href="book-service.html"
+                                                                class="tajawal_black icons_img_to_slider">
+                                                                <img src="images/assets/blood_test.png" alt="">
+                                                            </a>
+                                                        </div>
+                                                        <h4>Blood Pressure</h4>
+                                                    </li>
+                                                </div>
+                                            </ul>
                                         </div>
                                     </div>
                                 </div>
@@ -247,7 +305,7 @@
                         </div>
                     </li>
                     <li class="tajawal_black parallax" style="background-image: url(images/patterns/pt32.jpg);">
-                        <div class="tajawal_black flex-caption text-align-center vertical-bottom">
+                        <div class="tajawal_black  text-align-center vertical-bottom">
                             <div class="tajawal_black container">
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
@@ -281,26 +339,16 @@
             <div class="tajawal_black container">
                 <div class="tajawal_black row">
                     <div class="tajawal_black col-md-8 col-sm-12 equalize">
-                        <div class="tajawal_black galleryflex flexslider" data-autoplay="yes" data-arrows="no"
-                            data-speed="7000" data-style="slide" data-direction="vertical">
-                            <ul class="tajawal_black slides">
-                                <li class="tajawal_black slide">
-                                    <span class="tajawal_black icon-block"><i class="fa fa-newspaper-o"></i></span>
+                        <div class="tajawal_black galleryflex flexslider">
+                            <div class="tajawal_black parent_section_call">
+                                <div class="img_icon_call">
+                                    <img src="images/assets/call_hospital.png" alt="">
+                                </div>
+                                <div class="tajawal_black text_call">
                                     <p><a href="#">Solicitor voted 15th best company to work for in the US</a></p>
                                     <span class="tajawal_black meta-data">15 May, 2015</span>
-                                </li>
-                                <li class="tajawal_black slide">
-                                    <span class="tajawal_black icon-block"><i class="fa fa-calendar-check-o"></i></span>
-                                    <p><a href="#">Financial Investigations and Enforcement Trends Seminar</a></p>
-                                    <span class="tajawal_black meta-data">26 July, 2016</span>
-                                </li>
-                                <li class="tajawal_black slide">
-                                    <span class="tajawal_black icon-block"><i class="fa fa-twitter"></i></span>
-                                    <p>GreensKeeper - Gardening &amp; Landscaping Responsive HTML5 Template' on <a
-                                            href="#">#EnvatoMarket</a> by @imithemes <a href="#">#themeforest</a> <a
-                                            href="#">https://t.co/LbRl0i8Eaw</a></p>
-                                </li>
-                            </ul>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
@@ -902,7 +950,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>  
+                    </div>
                     <div class="tajawal_black col-md-3 col-sm-4">
                         <div class="tajawal_black widget footer_widget widget_recent_posts">
                             <h4 class="tajawal_black widgettitle">Recent Posts</h4>
