--- a/index.html
+++ b/index.html
@@ -47,33 +47,52 @@
                         <div class="tajawal_black col-md-6 col-sm-6" id="update_styke">
                             <div class="tajawal_black menu_top_header">
                                 <a href="#" id="info-toggle"><i class="fa fa-bars toggleIcon"></i></a>
-                                <ul id="info-content">
-                                    <li>
-                                        <i class="fa fa-phone"></i>
-                                        <div class="tajawal_black ititle">Call us toll free</div>
-                                        <strong>1800-9090-8089</strong>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-map-signs"></i>
-                                        <div class="tajawal_black ititle">
-                                            <div class="tajawal_black galleryflex flexslider" data-direction="vertical"
-                                                data-autoplay="yes" data-arrows="yes">
-                                                <ul class="tajawal_black slides">
-                                                    <li class="tajawal_black slide">Suite 300 Houston<br>Texas - 77042
-                                                        USA</li>
-                                                    <li class="tajawal_black slide">Level 2 Collins Road<br>Melbourne -
-                                                        Australia</li>
-                                                </ul>
-                                            </div>
-
+                                <div id="info-content">
+                                    <div class="container_pairent">
+                                        <div class="emergency__icon">
+                                            <img src="images/assets/call_hospital.png" alt="">
                                         </div>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-clock-o"></i>
-                                        <div class="tajawal_black ititle">Working Hours</div>
-                                        <strong>Mon-Sat 09:00 to 17:00</strong>
-                                    </li>
-                                </ul>
+                                        <a href="tel:+40(0)20 0390 0999" class="phone__number">
+                                            <i class="fa-solid fa-phone-volume"></i>
+                                            <span class="tajawal_black">+40 (0)20 0390 0999</span>
+                                        </a>
+                                        <p class="tajawal_black line_height_style">
+                                            Please feel free to contact our friendly reception staff with any general or
+                                            medical enquiry.
+                                        </p>
+                                        <a href="appointment.html" class="tajawal_black btn  btn__link">
+                                            <span>Make Appointment</span>
+                                            <i class="fa-solid fa-arrow-right"></i>
+                                            <!-- <i class="fa-thin fa-arrow-right"></i> -->
+                                        </a>
+                                    </div>
+                                    <div class="container_child">
+                                        <div class="tajawal_black col-md-6 col-sm-6 update_styke">
+                                            <ul class="tajawal_black pull-right social-icons icons_header">
+                                                <li class="tajawal_black facebook">
+                                                    <a href="#">
+                                                        <i class="fa fa-facebook-f"></i>
+                                                    </a>
+                                                </li>
+                                                <li class="tajawal_black twitter">
+                                                    <a href="#">
+                                                        <i class="fa fa-twitter"></i>
+                                                    </a>
+                                                </li>
+                                                <li class="tajawal_black linkedin">
+                                                    <a href="#">
+                                                        <i class="fa fa-linkedin"></i>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                
+                                            <form class="tajawal_black search-form">
+                                                <input type="text" placeholder="Search">
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                             <div class="tajawal_black call_row_div">
                                 <i class="fa-solid fa-phone-volume"></i>
@@ -111,10 +130,9 @@
                 <div class="tajawal_black container flex_style_header">
                     <div class="tajawal_black site-logo">
                         <a href="index.html">
-                            <img src="images/logo.png" alt="" class="tajawal_black default-logo">
+                            <img src="images/logo_white.png" alt="" class="tajawal_black default-logo">
                         </a>
                     </div>
-
                     <!-- <a href="#" id="menu-toggle">
                         <i class="fa fa-bars toggleIcon"></i>
                     </a> -->
@@ -126,7 +144,8 @@
                         </div>
                     </div>
                     <nav class="tajawal_black main-navigation pull-right" id="nav">
-                        <ul class="tajawal_black dd-menu sf-menu">
+                        <ul class="tajawal_black dd-menu sf-menu menu_hospital">
+                            <span id="close-arrow"><i class="fa-solid fa-xmark"></i></span>
                             <li><a href="index.html">Home</a>
                                 <ul>
                                     <li><a href="header-style2.html">Header Style 2</a></li>
@@ -211,9 +230,10 @@
                             <div class="tajawal_black container">
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
-                                        <div class="tajawal_black flex-caption-text">
+                                        <div class="tajawal_black flex-caption-text style_position">
                                             <h2>Providing Best &amp; <br> Medical Care </h2>
-                                            <p>VThe health and well-being of our patients and their health care team
+                                            <p class="tajawal_black style_pragraph">VThe health and well-being of our
+                                                patients and their health care team
                                                 will
                                                 <br>Aalways be our priority, so we follow the best practices for
                                                 cleanliness.
@@ -309,7 +329,7 @@
                             <div class="tajawal_black container">
                                 <div class="tajawal_black flex-caption-table style_to_bg_before">
                                     <div class="tajawal_black flex-caption-cell">
-                                        <div class="tajawal_black flex-caption-text">
+                                        <div class="tajawal_black flex-caption-text style_position">
                                             <h2>Caring For The &amp; <br>
                                                 Health And Well &amp; <br>
                                                 Being Of Family. </h2>
@@ -318,14 +338,16 @@
                                                 <br>Aalways be our priority, so we follow the best practices for
                                                 cleanliness.
                                             </p>
-                                            <a href="about.html"
-                                                class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
-                                                some of our
-                                                top cases</a>
-                                            <a href="testimonials.html"
-                                                class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
-                                                some of our
-                                                top cases</a>
+                                            <div class="links_in_sliders_pages">
+                                                <a href="about.html"
+                                                    class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
+                                                    some of our
+                                                    top cases</a>
+                                                <a href="testimonials.html"
+                                                    class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
+                                                    some of our
+                                                    top cases</a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -998,7 +1020,7 @@
                     </ul>
                 </div>
                 <div class="tajawal_black footer-row3">
-                    <a href="index.html"><img src="images/logo-light.png" alt="" width="130"
+                    <a href="index.html"><img src="images/logo_black.png" alt="" width="130"
                             class="tajawal_black site-footer-logo"></a>
                     <p>&copy; 2016 Solicitor Group of Lawyers &amp; Attorneys. All Rights Reserved.</p>
                 </div>
