--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                         </a>
                                     </div>
                                     <div class="container_child">
-                                        <div class="tajawal_black col-md-6 col-sm-6 update_styke">
+                                        <div class="tajawal_black col-md-6 col-sm-6 update_style">
                                             <ul class="tajawal_black pull-right social-icons icons_header">
                                                 <li class="tajawal_black facebook">
                                                     <a href="#">
@@ -85,8 +85,9 @@
                                                     </a>
                                                 </li>
                                             </ul>
-                
+
                                             <form class="tajawal_black search-form">
+                                                <i class="fa-solid fa-magnifying-glass"></i>
                                                 <input type="text" placeholder="Search">
                                             </form>
                                         </div>
@@ -119,6 +120,7 @@
                             </ul>
 
                             <form class="tajawal_black search-form">
+                                <i class="fa-solid fa-magnifying-glass"></i>
                                 <input type="text" placeholder="Search">
                             </form>
                         </div>
@@ -146,13 +148,15 @@
                     <nav class="tajawal_black main-navigation pull-right" id="nav">
                         <ul class="tajawal_black dd-menu sf-menu menu_hospital">
                             <span id="close-arrow"><i class="fa-solid fa-xmark"></i></span>
-                            <li><a href="index.html">Home</a>
+                            <li>
+                                <a class="link_list_header" href="index.html">Home</a>
                                 <ul>
                                     <li><a href="header-style2.html">Header Style 2</a></li>
                                     <li><a href="header-style3.html">Header Style 3</a></li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">About Us</a>
+                            <li>
+                                <a class="link_list_header" href="about.html">About Us</a>
                                 <ul>
                                     <li><a href="about.html">Overview</a></li>
                                     <li><a href="team.html">Our people</a></li>
@@ -160,13 +164,15 @@
                                     <li><a href="testimonials.html">Client Testimonials</a></li>
                                 </ul>
                             </li>
-                            <li><a href="services.html">Client Services</a>
+                            <li>
+                                <a class="link_list_header" href="services.html">Client Services</a>
                                 <ul>
                                     <li><a href="services.html">All Services</a></li>
                                     <li><a href="single-service.html">Service Detail page</a></li>
                                 </ul>
                             </li>
-                            <li class="tajawal_black megamenu"><a href="javascrip:void(0)">News &amp; Events</a>
+                            <li class="tajawal_black megamenu">
+                                <a class="link_list_header" href="javascrip:void(0)">News &amp; Events</a>
                                 <ul class="tajawal_black dropdown">
                                     <li>
                                         <div class="tajawal_black megamenu-container container">
@@ -206,14 +212,17 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="careers.html">Careers</a>
+                            <li>
+                                <a class="link_list_header" href="careers.html">Careers</a>
                                 <ul>
                                     <li><a href="careers.html">Why work with us</a></li>
                                     <li><a href="vacancies.html">Vacancies</a></li>
                                     <li><a href="trainee-solicitors.html">Trainee Solicitors</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact Us</a></li>
+                            <li>
+                                <a class="link_list_header" href="contact.html">Contact Us</a>
+                            </li>
                         </ul>
                     </nav>
                     <div class="dark-blue" id="blue"></div>
@@ -339,14 +348,19 @@
                                                 cleanliness.
                                             </p>
                                             <div class="links_in_sliders_pages">
-                                                <a href="about.html"
-                                                    class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
-                                                    some of our
-                                                    top cases</a>
-                                                <a href="testimonials.html"
-                                                    class="tajawal_black btn btn-default btn-ghost btn-light btn-rounded">View
-                                                    some of our
-                                                    top cases</a>
+                                                <a href="about.html" 
+                                                class="tajawal_black link_sliders_home style_color">
+                                                   <span class="span_links_slider_home">
+                                                     View some of our top cases
+                                                   </span>
+                                                   <i class="fa-solid fa-arrow-right"></i>
+                                                </a>
+                                                <a href="testimonials.html" class="tajawal_black link_sliders_home">
+                                                    <span class="span_links_slider_home">
+                                                        View Our Services
+                                                    </span>
+                                                    <i class="fa-solid fa-arrow-right"></i>
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
